# MonitorBrightness

./: README.md  monitor_brightness.py  pyproject.toml
mbright/: main.py
